# tauri-vue3-tailwind-vite

./: .eslintrc-auto-import.json  components.d.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  env.d.ts  main.ts  router.ts  store.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json  test.html
src-tauri/.store/: db  snap.000000000000008C
src-tauri/src/: audio.rs  cookie.rs  error.rs  main.rs  utils.rs
src/assets/: main.postcss
src/views/: home.tsx
