[package]
name = "tauri_vue3_template"
version = "0.3.0"
description = "A Tauri App"
authors = ["ITisl"]
license = "MIT"
repository = "https://github.com/Uninen/tauri-vue-template"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0.99"
serde = { version = "1.0.164", features = ["derive"] }
tauri = { version = "1.4.1", features = ["api-all"] }
tokio = "1.29.0"
futures = "0.3.28"
windows = "0.39.0"
webview2-com = "0.19.1"
oneshot = "0.1.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "time",
  "local-time",
] }
reqwest = { version = "0.11.14", features = ["json", "multipart", "cookies"] }
time = { version = "0.3.7", features = ["macros"] }
sled = "0.34.7"
scraper = "0.17.1"
tauri-plugin-window-state = "0.1.0"
chrono = "0.4.26"
md5 = "0.7.0"
rand = "0.8.5"
hex = "0.4.3"
uuid = "1.3.3"
base64 = "0.21.0"
hmac = "0.12.1"
sha2 = "0.10.6"
sha256 = "1.1.2"
sha3 = "0.10.6"
rodio = "0.17.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
